dotnet_macros/tests/ui/dotnet_class_bad_bool.stderr
error: expected a bool literal, `true` or `false`
 --> tests/ui/dotnet_class_bad_bool.rs:5:29
  |
5 | #[dotnet_class(value_type = "yes")]
  |                             ^^^^^
